--- a/main.html
+++ b/main.html
@@ -26,8 +26,11 @@
     </header>
     <h1>TEST 1</h1>
     <h2>Test 2</h2>
+    <h3>TEST3</h3>
 
-    <p>TEST 3</p>
+    <p><center>THIS IS A TEST</center>THIS IS A TEST</p>
+    <p><center>This is test 2</center></p>
+    <p><center>TEST 3</center></p>
 </body>
 
 
