test 3 and 4 completed

--- a/main.html
+++ b/main.html
@@ -30,7 +30,9 @@
 
     <p><center>THIS IS A TEST</center>THIS IS A TEST</p>
     <p><center>This is test 2</center></p>
-    <p><center>TEST 3</center></p>
+    <p><center>This is test 3</center></p>
+    <p><center>This is test 4</center></p>
+    
 </body>
 
 
