--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
     <p><center>This is test 2</center></p>
     <p><center>This is test 3</center></p>
     <p><center>This is test 4</center></p>
-    
+    <p><center><b>TEST COMPLETED!!!</b></center></p>
 </body>
 
 
