again the same, added two lines of code

--- a/main.html
+++ b/main.html
@@ -36,6 +36,8 @@
     <p><center><b>CHANGES</b></center></p>
     <p><center>This is test 1. ALTERANATE ACCOUNT</center></p>
     <p><center>This is test 2. ALTERANATE ACCOUNT</center></p>
+    <p><center>This is test 3. ALTERANATE ACCOUNT</center></p>
+    <p><center>This is test 4. ALTERANATE ACCOUNT</center></p>
     
 </body>
 
