--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
     <h3>TEST3</h3>
 
     <p><center>THIS IS A TEST</center>THIS IS A TEST</p>
-    <p><center>THIS IS mero kera A TEST</center>THIS IS A TEST</p>
+    <p><center>THIS IS A TEST DARSHAN</center>THIS IS A TEST</p>
     <p><center>This is test 2</center></p>
     <p><center>This is test 3</center></p>
     <p><center>This is test 4</center></p>
