--- a/main.html
+++ b/main.html
@@ -27,20 +27,7 @@
     <h1>TEST 1</h1>
     <h2>Test 2</h2>
     <h3>TEST3</h3>
-
-    <p><center>THIS IS A TEST</center>THIS IS A TEST</p>
-    <p><center>THIS IS A TEST DARSHAN</center>THIS IS A TEST</p>
-    <p><center>THIS IS A TEST</center>THIS IS A TEST</p>
-    <p><center>This is test 2</center></p>
-    <p><center>This is test 3</center></p>
-    <p><center>This is test 4</center></p>
-    <p><center><b>TEST COMPLETED!!!</b></center></p>
-    <p><center><b>CHANGES</b></center></p>
-    <p><center>This is test 1. ALTERANATE ACCOUNT</center></p>
-    <p><center>This is test 2. ALTERANATE ACCOUNT</center></p>
-    <p><center>This is test 3. ALTERANATE ACCOUNT</center></p>
-    <p><center>This is test 4. ALTERANATE ACCOUNT</center></p>
-    
+<p><center><b>TEST COMPLETED</b></center></p>
 </body>
 
 
