--- a/main.html
+++ b/main.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -16,11 +18,11 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Top-Up</a></li>
                 <li><a href="#">Subscriptions</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
                 <div class="search">Search</div>
 
 
-                
+
             </ul>
         </nav>
     </header>
